force-app/main/default/objects/Transaction__c/fields/Balance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Balance_Amount__c</fullName>
    <formula>Deposit_Amount__c - Withdrawal_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>