force-app/main/default/objects/Transaction__c/fields/Bank_Balance__c.field-meta.xml
<CustomField>
    <fullName>Bank_Balance__c</fullName>
    <formula>Bank_Account__r.Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>