force-app/main/default/objects/Transaction__c/fields/Withdrawal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Withdrawal Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>