force-app/main/default/objects/Transaction__c/listViews/Easy.listView-meta.xml
<ListView>
    <fullName>Easy</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Easy</label>
</ListView>